src/maths/sparse/ChangeLog
1999-08-28  Emmanuel Rouat  <emmanuel.rouat@wanadoo.fr>

	* spdefs.h: #includes spice.h instead of misc.h
	added a few #undefs to avoid redaclarations 

2023-06-06 Dietmar Warning adaption to latest sparse version 1.4b
spAllocate.c:
	ReserveElements() not needed
	Distinction between OriginalCount() and ElementCount() needed for ACCT report. Structure Matrix has no "Original" member anymore, seems ELEMENTS plays this role.

spBuild.c:
	int Min is initialized with LARGEST_LONG_INTEGER follows in -1, Min should be long int

spSMP.c:
	SMPfindElt() calls spcFindElement() - it is not available

	Call's to spcXXX functions are correct for real, complex needed adaptions in arguments count
	Prototypes in spmatrix.h are OK, but in the call of the function is no difference in parameter count.
	E.g. compiling with spSEPARATED_COMPLEX_VECTORS=0 follows in error like this:
	spSMP.c: In function ‘SMPcSolve’:
	spSMP.c:222:5: error: too many arguments to function ‘spSolve’
	222 |     spSolve( (char *)Matrix, RHS, RHS, iRHS, iRHS );
		|     ^~~~~~~
	In file included from spSMP.c:93:
	../../../src/include/ngspice/spmatrix.h:371:23: note: declared here
	371 | spcEXTERN  void       spSolve( spMatrix, spREAL[], spREAL[] );
	
	Function SMPreorder line 203 we have:
	spSetComplex( (char *)Matrix );

	But SMPreorder() is the function for real operation on the contrary to SMPcReorder().
	Correct ngspice operation w/o segmentation fault in Solve we got with
	spSetReal( (char *)Matrix );
